tdf#123072 Qt5 don't register unknown PSP fonts

LO's own font handling backend has some additional font styles,
which are unknown to Qt, probably because it uses some stricter
handling to decide which fonts are "usable", and because Qt seems
to not know about some style types AFAIK.

The main problem is QFontDatabase::addApplicationFont, as this
seems to parse the whole font instead of a kind of registration,
which takes ages for something like the Noto CJK style variants.

As a workaround this drops the registration of all the additional
PSP fonts. Both Qt5 and PSP use fontconfig but there is definitly
some difference here, which needs to be resolved in some other
way at some point.

Change-Id: Id63cd0258ff56ee988323551820500b2c72a12be
Reviewed-on: https://gerrit.libreoffice.org/69576
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>